--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_APP_PATH = 'http://localhost:8000/api'
+VITE_APP_PATH = 'http://127.0.0.1:8000/api'
+# VITE_APP_PATH = 'http://rayhana.local/api'
+# VITE_APP_PATH = 'http://gite-rihanna.great-site.net/api'
