--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy" : "http://gite-rihanna.great-site.net/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,8 +13,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "dotenv": "^16.0.3",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
